# ImgCatFrontend

./: .gitignore
backend/: Cargo.toml
backend/src/: config.rs  main.rs  schema.sql
backend/src/models/: auth.rs  filesystem.rs
backend/src/routes/: auth.rs  filesystem.rs
frontend/src/lib/components/: FolderCard.svelte  ImageCard.svelte  IntroAnimation.svelte  Sidebar.svelte
frontend/src/lib/stores/: files.ts  folders.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/home/: +layout.svelte  +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/signin/: +page.svelte
