[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = "1.127.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "chrono",
    "postgres",
    "uuid",
], default-features = false }
chrono = "0.4.44"
env_logger = "0.11.10"
log = "0.4.29"
reqwest = "0.13.2"
argon2 = "0.5.3"
rand = "0.10.0"
